--- a/openbanking-java-sdk-master/web/pom.xml
+++ b/openbanking-java-sdk-master/web/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>2.3.1.RELEASE</version>
         </dependency>
+        
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
     </dependencies>
 
 </project>
